--- a/database/.gitignore
+++ b/database/.gitignore
@@ -1,1 +1,72 @@
 *.sqlite*
+
+# Ignore node modules and dependencies
+node_modules/
+vendor/
+
+# Ignore environment and configuration files
+.env
+.env.local
+.env.development
+.env.production
+.env.testing
+.env.backup
+
+# Ignore IDE/editor settings
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Ignore log files
+storage/logs/
+*.log
+*.log.*
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Ignore Laravel cache & session files
+bootstrap/cache/
+storage/framework/cache/
+storage/framework/sessions/
+storage/framework/views/
+
+# Ignore database files
+database/*.sqlite
+database/*.sqlite3
+database/database.sqlite
+
+# Ignore compiled files
+public/hot
+public/storage
+storage/oauth-private.key
+storage/oauth-public.key
+storage/debugbar/
+storage/app/public/
+
+# Ignore Composer and NPM dependencies lock files (optional)
+composer.lock
+yarn.lock
+package-lock.json
+
+# Ignore compiled assets (optional)
+public/mix-manifest.json
+public/css/
+public/js/
+public/build/
+
+# Ignore PHPUnit test result cache
+.phpunit.result.cache
+
+# Ignore Docker files (if using Docker)
+docker-compose.yml
+docker-compose.override.yml
+
+# Ignore Laravel Sail (if using it)
+sail
+docker-compose.yml
+
+# Ignore additional system files
+.DS_Store
+Thumbs.db
